Update VectorApiDemo.java